[FIX] alignement

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
     display: flex;
     flex-direction: column;
 }
+
+body{
+    max-width: calc(100% - 20px);
+}
 p[id^="fichier"]{
     display: none;
 }
